# Kiri2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Kiri2d/: CMakeLists.txt
Kiri2d/include/: kiri_define.h  kiri_pch.h  kiri_utils.h
Kiri2d/include/kiri2d/: scene.h
Kiri2d/include/kiri2d/bop12/: booleanop.h  point_2.h  polygon.h  segment_2.h  utilities.h
Kiri2d/include/kiri2d/camera/: camera.h
Kiri2d/include/kiri2d/data/: edge3.h  face3.h  shape_struct.h  vertex3.h
Kiri2d/include/kiri2d/geo/: convex_clip2.h  convex_hull3.h  face_conflict_list.h  geo_plane3.h  vector2_list.h  vertex_conflict_list.h
Kiri2d/include/kiri2d/lib/: tinycolormap.hpp
Kiri2d/include/kiri2d/linked_list/: circular_doubly_linked_list.h  doubly_linked_list.h
Kiri2d/include/kiri2d/model/: model_tiny_obj_loader.h
Kiri2d/include/kiri2d/sph/: grid.h  (+4 more)
Kiri2d/src/kiri2d/: scene.cpp
Kiri2dExamples/: CMakeLists.txt
Kiri2dExamples/include/cuda/: cuda_helper.h
Kiri2dExamples/src/: main.cpp  main_cuda.cpp  main_dem.cpp  main_treemap.cpp
Kiri2dPBSCuda/: CMakeLists.txt
Kiri2dPBSCuda/include/: kiri2d_pbs.h  kiri2d_pbs_utils.h  kiri_pbs_cuda2d_define.h
Kiri2dPBSCuda/include/kiri_pbs_cuda/: kiri_pbs_pch.cuh
cmake/: FindOpenCV.cmake
configuration/: root_directory.h.in
core/: CMakeLists.txt
core/include/: kiri2d.h  kiri_define.h  kiri_log.h  kiri_pch.h  kiri_timer.h
core/include/kiri2d/: scene.h
core/src/: kiri_log.cpp
core/src/kiri2d/: scene.cpp
demos/bdem_example/: CMakeLists.txt
demos/bdem_example/src/: example1.cpp  main.cpp
demos/convexhull2d_scene1/: CMakeLists.txt
demos/convexhull2d_scene1/src/: main.cpp
demos/convexhull2d_scene2/: CMakeLists.txt
demos/convexhull2d_scene2/src/: main.cpp
demos/delaunay2d_scene1/: CMakeLists.txt
demos/delaunay2d_scene1/src/: main.cpp
demos/dem2d_scene1/: CMakeLists.txt
demos/dem2d_scene1/include/: uni_dem_example.h
demos/dem2d_scene1/src/: main.cpp  uni_dem_example.cpp
demos/dynamic_fracture_scene1/: CMakeLists.txt
demos/dynamic_fracture_scene1/src/: main.cpp
demos/eigen_mkl_tester/: CMakeLists.txt
demos/eigen_mkl_tester/src/: main.cpp
demos/interior_point_method/: CMakeLists.txt
demos/interior_point_method/include/: gridding.h  ipm.h  sph_grid.h
demos/interior_point_method/src/: main.cpp
demos/lloyd2d_scene1/: CMakeLists.txt
demos/lloyd2d_scene1/src/: main.cpp
demos/lloyd2d_scene2/: CMakeLists.txt
demos/lloyd2d_scene2/src/: main.cpp
demos/ms_sampler2d/: CMakeLists.txt
demos/ms_sampler2d/src/: main.cpp
demos/new_proto_sphere_sdf_parallel/: CMakeLists.txt
demos/new_proto_sphere_sdf_parallel/src/: main.cpp
demos/pdipm_sampler/: CMakeLists.txt
demos/pdipm_sampler/include/: data.h  gridding.h  primal_dual_ipm.h  sph_grid.h
demos/pdipm_sampler/src/: main.cpp
demos/pdipm_sampler2/: CMakeLists.txt
demos/pdipm_sampler2/include/: data.h  gridding.h  offset_gridding.h  primal_dual_ipm.h  sph_grid.h
demos/pdipm_sampler2/src/: main.cpp
demos/pdipm_sampler3/: CMakeLists.txt
demos/pdipm_sampler3/include/: data.h  offset_gridding.h  primal_dual_ipm.h  sph_grid.h
demos/pdipm_sampler3/src/: main.cpp
demos/poisson_disk_multi_sampler2d/: CMakeLists.txt
demos/poisson_disk_multi_sampler2d/src/: main.cpp
demos/poisson_disk_sampler2d/: CMakeLists.txt
demos/poisson_disk_sampler2d/src/: main.cpp
demos/primal_dual_ipm/: CMakeLists.txt
demos/primal_dual_ipm/include/: primal_dual_ipm.h
demos/primal_dual_ipm/src/: main.cpp
demos/proto_sphere_bon2020_scene1/: CMakeLists.txt
demos/proto_sphere_bon2020_scene1/src/: main.cpp
demos/proto_sphere_parallel/: CMakeLists.txt
demos/proto_sphere_parallel/src/: main.cpp
demos/proto_sphere_parallel_test/: CMakeLists.txt
demos/proto_sphere_parallel_test/src/: main.cpp
demos/proto_sphere_scene1/: CMakeLists.txt
demos/proto_sphere_scene1/src/: main.cpp
demos/proto_sphere_scene2/: CMakeLists.txt
demos/proto_sphere_scene2/src/: main.cpp
demos/proto_sphere_sdf_parallel/: CMakeLists.txt
demos/proto_sphere_sdf_parallel/src/: main.cpp
demos/proto_sphere_test/: CMakeLists.txt
demos/proto_sphere_test/src/: main.cpp
demos/rigidbody2d_scene/: CMakeLists.txt
demos/rigidbody2d_scene/src/: main.cpp
demos/sdf2d_scene1/: CMakeLists.txt
demos/sdf2d_scene1/src/: main.cpp
demos/soft_protosphere2d_standard/: CMakeLists.txt
demos/soft_protosphere2d_standard/src/: main.cpp
demos/soft_protosphere2d_uni_radius/: CMakeLists.txt
demos/soft_protosphere2d_uni_radius/src/: main.cpp
demos/straight_skeleton2d/: CMakeLists.txt
demos/straight_skeleton2d/src/: main.cpp
demos/test_bayesian/: CMakeLists.txt
demos/voronoi2d_scene1/: CMakeLists.txt
demos/voronoi2d_scene1/src/: main.cpp
demos/voronoi2d_scene2/: CMakeLists.txt
demos/voronoi2d_scene2/src/: main.cpp
demos/voronoi_treemap_nocaj_scene1/: CMakeLists.txt
demos/voronoi_treemap_nocaj_scene1/src/: main.cpp
demos/voronoi_treemap_nocaj_scene2/: CMakeLists.txt
demos/voronoi_treemap_nocaj_scene2/src/: main.cpp
demos/xproto_sphere_parallel_comp_strategy/: CMakeLists.txt
demos/xproto_sphere_parallel_comp_strategy/src/: main.cpp
export/images/bunny_porosity/: min.txt
export/images/bunny_sdfoffset_porosity/: res.txt
resources/alpha_shapes/: alligator.xy  armadillo.xy  beast.xy  bunny.xy  homer.xy  horse.xy  lucy.xy  nefertiti.xy  spot.xy  teapot.xy  woody.xy  xyzrgb_dragon.xy
resources/bgeo/box/: box_180.bgeo  box_200.bgeo  box_80.bgeo  box_80_opti2.bgeo  box_normal.bgeo  box_opti.bgeo  box_small.bgeo
resources/bgeo/bunny/: bunny_180.bgeo  bunny_80.bgeo
resources/cdf/box/: box_80.cdf  cube.cdf
resources/cdf/bunny/: bunny_180.cdf  bunny_80.cdf
scripts/: build_vs2015_win64.bat  build_vs2017_win64.bat  build_vs2019_win64.bat  build_vs2022_win64.bat  simple.c
scripts/alphashape/: cheburashka.xy  cow.xy  export_alphashape.py  test.py  test_xy.py  vislization.py
scripts/test/: circle_painter_v2.py  test.py
scripts/testcv/: template_matching.py
scripts/voronoi/: voronoi.py
tools/alphashape/: export_alphashape.py  vislization.py
tools/find_minimum/: test.py
(+241 files in other folders)
